crates/compiler/parser/tests/snapshots/diagnostics__expressions::invalid_binary_op.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { a +; }
--- Diagnostics ---
[02] Error: found ';' expected something else, identifier, or '('
   ╭─[ test.cairo:1:18 ]
   │
 1 │ func test() { a +; }
   │                  ┬  
   │                  ╰── found ';' expected something else, identifier, or '('
───╯
