crates/compiler/parser/tests/snapshots/diagnostics__expressions::invalid_number_format.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { 0xGG; }
--- Diagnostics ---
[01] Error: Invalid number '0xGG': Invalid number format
   ╭─[ test.cairo:1:13 ]
   │
 1 │ fn test() { 0xGG; }
   │             ──┬─  
   │               ╰─── Invalid number '0xGG': Invalid number format
───╯
