crates/compiler/parser/tests/snapshots/diagnostics__expressions::large_number.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { 4294967295; }
--- Diagnostics ---
[01] Error: Invalid number '4294967295': Number overflows 2**31 - 1
   ╭─[ test.cairo:1:13 ]
   │
 1 │ fn test() { 4294967295; }
   │             ─────┬────  
   │                  ╰────── Invalid number '4294967295': Number overflows 2**31 - 1
───╯
