crates/compiler/parser/tests/snapshots/diagnostics__expressions::number_overflow.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { 0x80000000; }
--- Diagnostics ---
[01] Error: Invalid number '0x80000000': Number overflows 2**31 - 1
   ╭─[ test.cairo:1:13 ]
   │
 1 │ fn test() { 0x80000000; }
   │             ─────┬────  
   │                  ╰────── Invalid number '0x80000000': Number overflows 2**31 - 1
───╯
