crates/compiler/parser/tests/snapshots/diagnostics__expressions::u32_overflow.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { 4294967296; }
--- Diagnostics ---
[01] Error: Invalid number '4294967296': Value is higher than u32::max
   ╭─[ test.cairo:1:13 ]
   │
 1 │ fn test() { 4294967296; }
   │             ─────┬────  
   │                  ╰────── Invalid number '4294967296': Value is higher than u32::max
───╯
