crates/compiler/parser/tests/snapshots/diagnostics__expressions::unclosed_paren.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { foo(a, b; }
--- Diagnostics ---
[02] Error: found ';' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&&', '||', ',', or ')'
   ╭─[ test.cairo:1:21 ]
   │
 1 │ fn test() { foo(a, b; }
   │                     ┬  
   │                     ╰── found ';' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&&', '||', ',', or ')'
───╯
