crates/compiler/parser/tests/snapshots/diagnostics__statements::if_statement_invalid_condition.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { if { x = 1; } }
--- Diagnostics ---
[02] Error: found '{' expected '('
   ╭─[ test.cairo:1:18 ]
   │
 1 │ func test() { if { x = 1; } }
   │                  ┬  
   │                  ╰── found '{' expected '('
───╯
