crates/compiler/parser/tests/snapshots/diagnostics__statements::let_statement_missing_semicolon.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { let x = 5 }
--- Diagnostics ---
[02] Error: found '}' expected '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&&', '||', or ';'
   ╭─[ test.cairo:1:23 ]
   │
 1 │ fn test() { let x = 5 }
   │                       ┬  
   │                       ╰── found '}' expected '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&&', '||', or ';'
───╯
