crates/compiler/parser/tests/snapshots/diagnostics__statements::missing_assignment_target.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { = 5; }
--- Diagnostics ---
[02] Error: found '=' expected '{', 'if', 'loop', 'while', 'for', 'break', 'continue', 'let', 'const', 'return', '!', '-', something else, identifier, '(', or '}'
   ╭─[ test.cairo:1:15 ]
   │
 1 │ func test() { = 5; }
   │               ┬  
   │               ╰── found '=' expected '{', 'if', 'loop', 'while', 'for', 'break', 'continue', 'let', 'const', 'return', '!', '-', something else, identifier, '(', or '}'
───╯
