crates/compiler/parser/tests/snapshots/diagnostics__toplevel::invalid_toplevel_block.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
{ let x = 1; }
--- Diagnostics ---
[02] Error: found '{' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
   ╭─[ test.cairo:1:1 ]
   │
 1 │ { let x = 1; }
   │ ┬  
   │ ╰── found '{' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
───╯
