crates/compiler/parser/tests/snapshots/diagnostics__toplevel::invalid_toplevel_if.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
if (true) { x = 1; }
--- Diagnostics ---
[02] Error: found 'if' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
   ╭─[ test.cairo:1:1 ]
   │
 1 │ if (true) { x = 1; }
   │ ─┬  
   │  ╰── found 'if' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
───╯
