crates/compiler/parser/tests/snapshots/diagnostics__toplevel::invalid_toplevel_let.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
let x = 5;
--- Diagnostics ---
[02] Error: found 'let' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
   ╭─[ test.cairo:1:1 ]
   │
 1 │ let x = 5;
   │ ─┬─  
   │  ╰─── found 'let' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
───╯
